--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "net": "^1.0.2"
+    "mysql2": "^2.2.5",
+    "net": "^1.0.2",
+    "sequelize": "^6.5.0"
   }
 }
